Add Mocha test for analyzeQuestions

--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,8 @@
   "main": "src/server.mjs",
   "scripts": {
     "dev": "node src/server.mjs",
-    "postinstall": "patch-package; ./node_modules/nodejs-whisper/cpp/whisper.cpp/models/download-ggml-model.sh medium;"
+    "postinstall": "patch-package; ./node_modules/nodejs-whisper/cpp/whisper.cpp/models/download-ggml-model.sh medium;",
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +17,8 @@
     "node-nlp": "^4.27.0",
     "nodejs-whisper": "^0.1.18",
     "patch-package": "^8.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^10.0.0"
   }
 }
