feat: enhance Ollama API call with dynamic context length and improve summary prompt clarity; add NVIDIA Container Toolkit setup script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,12 @@ services:
       - ollama_data:/root/.ollama
     environment:
       - OLLAMA_HOST=0.0.0.0
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - capabilities: [gpu]
+    runtime: nvidia
     pull_policy: always
     tty: true
     restart: unless-stopped
